fix: adjust li item shadow z-index

--- a/src/views/Advantages/Advantages.module.scss
+++ b/src/views/Advantages/Advantages.module.scss
@@ -96,10 +96,12 @@
 
     &:nth-of-type(2) {
       order: 1;
+      z-index: 1;
     }
 
     &:last-of-type {
       order: 2;
+      z-index: 1;
     }
   }
 }
